tests/errors/2_syntax_errors/boolop_if_condition2.java
class Main {
    static void run() {
        String a = "str";
        if(true && || ) { // and with a different type than boolean

        }
        
    }
}